--- a/first-article/index.html
+++ b/first-article/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>First Article | Blog Page</title>
+  <title>First Article | Blog</title>
   <link rel="stylesheet" href="../assets/stylesheet/style.css" />
 </head>
 
@@ -12,7 +12,7 @@
     <nav>
       <a href="/">Home</a>
       <a href="#">About</a>
-      <a href="#">Blog</a>
+      <a href="/">Blog</a>
     </nav>
   </header>
   <main>
