--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Blog Page | Deep dive into the more HTML tags and effective use CSS</title>
+  <title>Blog | Deep dive into the more HTML tags and effective use CSS</title>
   <link rel="stylesheet" href="assets/stylesheet/style.css" />
 </head>
 
@@ -12,7 +12,7 @@
     <nav>
       <a href="/">Home</a>
       <a href="#">About</a>
-      <a href="#">Blog</a>
+      <a href="/">Blog</a>
     </nav>
   </header>
   <main>
