--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
   <header class="header">
     <nav>
-      <a href="/">Home</a>
+      <a href="/blog-page">Home</a>
       <a href="#">About</a>
-      <a href="/">Blog</a>
+      <a href="/blog-page">Blog</a>
     </nav>
   </header>
   <main>
@@ -35,7 +35,7 @@
         <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus deleniti dolore soluta accusamus
           sint
           quosneque assumenda.</p>
-        <a href="/first-article/">Read More</a>
+        <a href="blog-page/first-article/">Read More</a>
         <hr>
       </article>
       <article>
@@ -56,7 +56,7 @@
         <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus deleniti dolore soluta accusamus
           sint
           quosneque assumenda.</p>
-        <a href="/another-article/">Read More</a>
+        <a href="blog-page/another-article/">Read More</a>
       </article>
     </section>
   </main>
