--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus deleniti dolore soluta accusamus
           sint
           quosneque assumenda.</p>
-        <a href="blog-page/first-article/">Read More</a>
+        <a href="first-article/">Read More</a>
         <hr>
       </article>
       <article>
@@ -56,7 +56,7 @@
         <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus deleniti dolore soluta accusamus
           sint
           quosneque assumenda.</p>
-        <a href="blog-page/another-article/">Read More</a>
+        <a href="another-article/">Read More</a>
       </article>
     </section>
   </main>
