--- a/another-article/index.html
+++ b/another-article/index.html
@@ -10,9 +10,9 @@
 <body>
   <header class="header">
     <nav>
-      <a href="/blog-page">Home</a>
+      <a href="/blog">Home</a>
       <a href="#">About</a>
-      <a href="/blog-page">Blog</a>
+      <a href="/blog">Blog</a>
     </nav>
   </header>
   <main>
